--- a/Beginners_R_wrappingUP.html
+++ b/Beginners_R_wrappingUP.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Katherine Tansey" />
 
-<meta name="date" content="2017-11-27" />
+<meta name="date" content="2018-01-15" />
 
 <title>Beginners’ R – Wrapping Up</title>
 
@@ -39,7 +39,7 @@ if (window.hljs) {
   hljs.configure({languages: []});
   hljs.initHighlightingOnLoad();
   if (document.readyState && document.readyState === "complete") {
-    window.setTimeout(function() { hljs.initHighlightingOnLoad(); }, 0);
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
   }
 }
 </script>
@@ -219,7 +219,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">Beginners’ R – Wrapping Up</h1>
 <h4 class="author"><em>Katherine Tansey</em></h4>
-<h4 class="date"><em>27 November 2017</em></h4>
+<h4 class="date"><em>15 January 2018</em></h4>
 
 </div>
 
